[package]
name = "area_crate"
version = "1.0.1"
edition = "2021"
authors = ["Akshit"]
description = "A comprehensive geometry calculation library for areas, perimeters, surface areas, and volumes"
license = "MIT"
keywords = ["geometry", "mathematics", "area", "volume", "3d"]
categories = ["mathematics", "science"]
repository = "https://github.com/AkshitVadodariya1201/area_crate"
documentation = "https://docs.rs/area_crate"
readme = "README.md"

[dependencies]
